added the blogs

--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Simple website</title>
+    <link rel="stylesheet" href="blog.css">
 </head>
 <body>
-    
+    <div>
+        <h3>My first blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni minima, id numquam maiores vel quaerat quam facilis nulla accusamus a blanditiis, aut deserunt perferendis atque ipsum cupiditate sequi, corporis quo.</p>
+
+    </div>
+    <div><h3>My first blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni minima, id numquam maiores vel quaerat quam facilis nulla accusamus a blanditiis, aut deserunt perferendis atque ipsum cupiditate sequi, corporis quo.</p>
+    </div>
+    <div><h3>My first blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni minima, id numquam maiores vel quaerat quam facilis nulla accusamus a blanditiis, aut deserunt perferendis atque ipsum cupiditate sequi, corporis quo.</p>
+    </div>
 </body>
 </html>
