--- a/index.html
+++ b/index.html
@@ -18,5 +18,13 @@
     <div><h3>My first blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni minima, id numquam maiores vel quaerat quam facilis nulla accusamus a blanditiis, aut deserunt perferendis atque ipsum cupiditate sequi, corporis quo.</p>
     </div>
+    <div>
+        <h3>How to push incremental code</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"add a meaningful commit message"</li>
+            <li>git push</li>
+        </ul>
+    </div>
 </body>
 </html>
