added a pretty cat picture

--- a/index.html
+++ b/index.html
@@ -26,5 +26,9 @@
             <li>git push</li>
         </ul>
     </div>
+    <div>
+        <h3>pretty cat</h3>
+        <img src="cat.jpg" alt="">
+    </div>
 </body>
 </html>
